Prevent double tap on mobile

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -5,6 +5,7 @@
 html {
     height: 100%;
     overflow-x: hidden;
+    touch-action: manipulation;
 }
 
 body {
